<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:padding="8dp">

    <TextView
        android:id="@+id/application_TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="Application Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/application_TextView">


        <RelativeLayout
            android:id="@+id/launchApplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/launchScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:contentDescription="@string/launchscreen"
                android:src="@drawable/baseline_launch_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/launchScreen"
                android:text="@string/launchscreen"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/playStoreRelativeLayout"
            android:layout_width="0dp"
            android:background="?attr/actionBarItemBackground"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/playStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="14dp"
                android:contentDescription="@string/playstore"
                android:src="@drawable/play_store_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/playStore"
                android:gravity="start"
                android:text="@string/playstore"
                android:textSize="12sp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/shareRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/shareApplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/share"
                android:src="@drawable/baseline_ios_share_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/shareApplication"
                android:gravity="center"
                android:text="@string/share"
                android:textSize="12sp"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/full_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/full_details"
                android:src="@drawable/baseline_details_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/full_details"
                android:text="@string/full_details"
                android:textSize="12sp"/>


        </RelativeLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/settingImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintVertical_bias="0"
        android:contentDescription="@string/setting"
        android:src="@drawable/baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        app:layout_constraintVertical_bias="0"
        android:textSize="12sp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/settingImageView"
        app:layout_constraintStart_toStartOf="@id/settingImageView"
        app:layout_constraintTop_toBottomOf="@id/settingImageView" />


    <ImageView
        android:id="@+id/deleteImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete"
        android:src="@drawable/recycle_bin_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/settingImageView"
        app:layout_constraintTop_toTopOf="@+id/settingImageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintVertical_bias="1"
        android:textSize="12sp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@id/deleteImageView"
        app:layout_constraintStart_toStartOf="@id/deleteImageView"
        app:layout_constraintTop_toBottomOf="@+id/deleteImageView" />


</androidx.constraintlayout.widget.ConstraintLayout>